gitops/apps/echo-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: default
spec:
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver
