gitops/apps/echo-service/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echoserver
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: echoserver-certs
    hosts:
    - echoserver.testing
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - echoserver.testing
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver
spec:
  hosts:
  - "echoserver.testing"
  gateways:
  - echoserver
  http:
  - route:
    - destination:
        host: echoserver
---
